
	* tools/apiGen/ApiGen.hs: minor updates necessary to work with the
	updated gapi tools.

	* tools/apiGen/atk-sources.xml, tools/apiGen/gdk-sources.xml
	tools/apiGen/glade-sources.xml,	tools/apiGen/gnomecanvas-sources.xml
	tools/apiGen/gtk-sources.xml, tools/apiGen/pango-sources.xml,
	tools/apiGen/Makefile : use later versions of Gtk+ and related libs,
	now at 2.4.14 rather than 2.2.2.

2005-01-26 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ApiGen.hs: Several marshaling improvements. Extract
	enums from the api file. Produce a list of objects and enums and use
	it when deciding how to marshal types. Marshal floats and doubles,
	flags and enums. Distinguish between GObjects and GtkObjects. Extract
	documentation of properties. Initial go at producing property
	definitions.

	* tools/apiGen/format-docs.xsl: extract documentation of properties.

	* tools/apiGen/Makefile: include parent api files to scan for types.

	 * tools/apiGen/README: note some todo items.

	 * tools/apiGen/atk-sources.xml, tools/apiGen/gdk-sources.xml
	 tools/apiGen/glade-sources.xml, tools/apiGen/gnomecanvas-sources.xml
	 tools/apiGen/gtk-sources.xml, tools/apiGen/pango-sources.xml: add and
	 update sources spec files.

2005-01-25 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/format-docs.xsl: deal with another kind of list and
	preserve formatting in definition list terms.

	* tools/apiGen/ApiGen.hs: extract properties and events from the xml
	api file (but don't use them yet). Improve the formatting of
	definition lists. Escape things inside literals properly. Eliminate
	an infinite loop bug in the line wrapping algorithm.

2005-01-24 Duncan Coutts <duncan@coutts.uklinux.net>

	* INSTALL: update the install instructions

	* Makefile.am: add missing dependency.

	* configure.ac: bump version to 0.9.7

2005-01-23 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/formatXml.c, tools/apiGen/gapi_parser.pl: add extra
	bits of the Gtk# gapi system.
