@@ -13,6 +13,9 @@
 	tools/apiGen/Makefile : use later versions of Gtk+ and related libs,
 	now at 2.4.14 rather than 2.2.2.
 
+	* demo/calc/Calc.hs, demo/calc/CalcModel.hs, demo/calc/Makefile
+	demo/calc/calc.glade: add a simple calculator demo.
+
 2005-01-26 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* tools/apiGen/ApiGen.hs: Several marshaling improvements. Extract
